[package]
name = "sra"
version = "0.1.0"
edition = "2024"
description = "SRA — Source Repositories for Applications"
license = "LGPL-3.0-or-later"

[[bin]]
name = "sra"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
